services/k8s/consolidated-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consolidated-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: consolidated-ip
    networking.gke.io/managed-certificates: miniflux-cert,readeck-cert,seafile-cert,bewcloud-cert
    kubernetes.io/ingress.class: "gce"
    ingress.gcp.kubernetes.io/pre-shared-cert: ""
spec:
  rules:
  - host: flux.j15r.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: miniflux-service
            port:
              number: 80
  - host: read.j15r.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: readeck-service
            port:
              number: 80
  - host: files.j15r.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: seafile-service
            port:
              number: 80
  - host: cloud.j15r.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: bewcloud-service
            port:
              number: 80
